fix issue of initial not working on IE (#1609)

--- a/src/targets/beacon/styles/views/Home/index.less
+++ b/src/targets/beacon/styles/views/Home/index.less
@@ -72,6 +72,7 @@
     border-color: #ccb08c;
   }
   .chosen-drop {
+    top: auto;
     top: initial;
     bottom: 54px;
     border-radius: 4px 4px 0 0;
